fix: fix TitlesSort overflow

--- a/src/components/Titles/TitlesSort/TitlesSort.module.css
+++ b/src/components/Titles/TitlesSort/TitlesSort.module.css
@@ -1,3 +1,4 @@
 .root {
     background: none;
+    flex-wrap: wrap;
 }
